<resources>

    <string name="app_name">Refuel</string>
    <string name="title_fragment_vehicle">Vehicle</string>
    <string name="title_fragment_statistics">Statistics</string>
    <string name="title_fragment_filling">Fillups</string>
    <string name="title_activity_vehicle">Choose Vehicle</string>
    <string name="title_activity_new_vehicle">Add Vehicle</string>
    <string name="title_activity_new_filling">Edit Fillup</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="consumption_unit_mpg">Miles per Gallon</string>
    <string name="consumption_unit_kpg">Kilometers per Gallon</string>
    <string name="consumption_unit_mpig">Miles per Imp. Gallon</string>
    <string name="consumption_unit_kpig">Kilometers per Imp. Gallon</string>
    <string name="consumption_unit_mpl">Miles per Liter</string>
    <string name="consumption_unit_gp100km">Gallons per 100 Kilometers</string>
    <string name="consumption_unit_lp100km">Liter per 100 Kilometers</string>
    <string name="consumption_unit_igp100km">Imp. Gallons per 100 Kilometers</string>
    
    <string name="distance_unit_kilometers">Kilometers</string>
    <string name="distance_unit_miles">Miles</string>
    
    <string name="quantity_liters">Liters</string>
    <string name="quantity_gallons">Gallons</string>
    <string name="quantity_imperial_gallons">Imp. Gallons</string>
    
    <string name="fuel_type_unleaded">Unleaded</string>
    <string name="fuel_type_premium_unleaded_95">Premium Unleaded 95</string>
    <string name="fuel_type_premium_unleaded_100">Premium Unleaded 100</string>
    <string name="fuel_type_super_unleaded">Super Unleaded</string>
    <string name="fuel_type_super_plus_unleaded">Super Plus Unleaded</string>
    <string name="fuel_type_e10">E10</string>
    <string name="fuel_type_bio_ethanol">Bio-Ethanol</string>
    <string name="fuel_type_bio_diesel">Bio-Diesel</string>
    <string name="fuel_type_diesel">Diesel</string>
    <string name="fuel_type_premium_diesel">Premium Diesel</string>
    <string name="fuel_type_vegetable_oil">Vegetable Oil</string>
    <string name="fuel_type_lpg">LPG</string>
    <string name="fuel_type_cngh">CNGH</string>
    <string name="fuel_type_cngl">CNGL</string>
    
    <string-array name="array_consumption">
        <item>Miles per Gallon</item>
        <item>Kilometers per Gallon</item>
        <item>Miles per Imp. Gallon</item>
        <item>Kilometers per Imp. Gallon</item>
        <item>Miles per Liter</item>
        <item>Gallons per 100 Kilometers</item>
        <item>Liter per 100 Kilometers</item>
        <item>Imp. Gallons per 100 Kilometers</item>
    </string-array>
    
    <string-array name="array_distance">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    
    <string-array name="array_fueltype">
        <item>Unleaded</item>
        <item>Premium Unleaded 95</item>
        <item>Premium Unleaded 100</item>
        <item>Super Unleaded</item>
        <item>Super Plus Unleaded</item>
        <item>E10</item>
        <item>Bio-Ethanol</item>
        <item>Bio-Diesel</item>
        <item>Diesel</item>
        <item>Premium Diesel</item>
        <item>Vegetable Oil</item>
        <item>LPG</item>
        <item>CNGH</item>
        <item>CNGL</item>
    </string-array>
    
    <string-array name="array_quantity">
        <item>Liters</item>
        <item>Gallons</item>
        <item>Imp. Gallons</item>
    </string-array>
    
    <!-- Menu Strings -->
    <string name="menu_clearInput">Clear</string>
    <string name="menu_register">Register</string>
    <string name="menu_addVehicle">Add Vehicle</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_save">Save</string>
    <string name="menu_logout">Logout</string>
    
    <string name="empty"></string>
    
    <string name="save">Save</string>
    
    <string name="edit_filling_cb_notFilledToTop">Not Filled To Top</string>
    <string name="edit_filling_tv_information">Fillup information</string>
    <string name="edit_filling_tv_extraData">Extra data</string>
    <string name="edit_filling_edt_price">Price</string>
    <string name="edit_filling_edt_quantity">Quantity</string>
    <string name="edit_filling_edt_distance">Distance</string>
    <string name="edit_filling_edt_comment">Comment</string>
    <string name="edit_filling_tv_fuelType">Fuel Type</string>
    
    <string name="vehicle_tv_information">Information</string>
    <string name="vehicle_tv_settings">Units</string>
    <string name="vehicle_tv_currency">Currency Symbol</string>
    <string name="vehicle_edt_name">Name</string>
    <string name="vehicle_edt_year">Year</string>
    <string name="vehicle_edt_make">Make</string>
    <string name="vehicle_edt_model">Model</string>
    <string name="vehicle_edt_currency">€</string>
    <string name="vehicle_toast_saved">Vehicle saved</string>   
    <string name="vehicle_saving">Saving vehicle &#8230;</string>
    <string name="vehicle_getting">Getting vehicle data &#8230;</string> 
    
    <string name="login_tv_name">Name</string>
    <string name="login_tv_password">Password</string>
    
    <string name="register_tv_name">Name</string>
    <string name="register_tv_email">Email</string>
    <string name="register_tv_password">Password</string>
    <string name="register_tv_password_repeat">Repeat Password</string>
    
    <string name="statistics_tv_consumption">Consumption</string>
    <string name="statistics_tv_distance">Distance</string>
    <string name="statistics_tv_fillup">Fillup</string>
    
    <string name="statistics_tv_average">Average</string>
    <string name="statistics_tv_worst">Worst</string>
    <string name="statistics_tv_best">Best</string>
    
    <string name="login_error_wrong_password">Wrong Password</string>
    <string name="login_error_user_exists_not">User not found</string>
    
    <string name="register_error_user_found">This user already exists!</string>
    
    <string name="vehicle_error_not_found">Found no vehicle</string>
    <string name="vehicle_error_exists">Vehicle with this name already exists!</string>
    
    <string name="error_input">Please check your input</string>
    
    <string name="error_no_connection">Could not connect</string>
    <string name="error_unexpected">Unexpected error occurred</string>
    
    <string name="login_processing">Logging in &#8230;</string>
    <string name="register_processing">Register &#8230;</string>
</resources>