<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
    style="@style/VehicleContainer"
    android:orientation="vertical" >

    <TextView
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics_tv_consumption" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_average" />

            <TextView
                android:id="@+id/tv_statistics_fuel_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="hallo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_worst" />

            <TextView
                android:id="@+id/tv_statistics_fuel_worst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_best" />

            <TextView
                android:id="@+id/tv_statistics_fuel_best"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>
    </TableLayout>
    
    <TextView
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics_tv_distance" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_average" />

            <TextView
                android:id="@+id/tv_statistics_fuel_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_worst" />

            <TextView
                android:id="@+id/tv_statistics_fuel_worst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_best" />

            <TextView
                android:id="@+id/tv_statistics_fuel_best"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>
    </TableLayout>
    
    <TextView
        style="@style/sectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics_tv_fillup" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_average" />

            <TextView
                android:id="@+id/tv_statistics_fuel_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_worst" />

            <TextView
                android:id="@+id/tv_statistics_fuel_worst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/statistics_tv_best" />

            <TextView
                android:id="@+id/tv_statistics_fuel_best"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
            
        </TableRow>
    </TableLayout>
    
</LinearLayout>
    
</ScrollView>